@@ -2,10 +2,14 @@ package base.api.book.service;
 
 
 import base.api.book.dto.ListingDto;
+import base.api.book.dto.search.ListingSearchDto;
 import base.api.book.entity.Listing;
 import base.api.book.mapper.ListingMapper;
 import base.api.book.repository.ListingRepository;
 import jakarta.transaction.Transactional;
+import org.apache.commons.lang3.StringUtils;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -39,7 +43,7 @@ public class ListingService {
         return listing
                 .stream()
                 .map(listingMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ListingDto> getAllListing () {
@@ -47,7 +51,21 @@ public class ListingService {
                 .findAll()
                 .stream()
                 .map(listingMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public Page<ListingDto> findListings(Pageable pageable, ListingSearchDto searchDto) {
+        Page<Listing> result;
+        if (StringUtils.isNoneBlank(searchDto.getTitle(), searchDto.getGenre())) {
+            result = listingRepository.findByTitleLikeAndGenre(pageable, searchDto.getTitle(), searchDto.getGenre());
+        } else if (StringUtils.isNoneBlank(searchDto.getTitle()) && StringUtils.isBlank(searchDto.getGenre())) {
+            result = listingRepository.findByTitle(pageable, searchDto.getTitle());
+        } else if (StringUtils.isBlank(searchDto.getTitle()) && StringUtils.isNotBlank(searchDto.getGenre())) {
+            result = listingRepository.findByGenre(pageable, searchDto.getGenre());
+        } else {
+            result = Page.empty();
+        }
+        return result.map(listingMapper::toDto);
     }
 
     public ListingDto updateListing (ListingDto listingDto) {
